# Markaz

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_incidents.py  0003_proxies.py  0004_roll_calls.py  0005_drills.py  0006_incident_status_details.py  0007_incident_coords.py  0008_proxy_coverage_date.py  0009_rating_axes.py  0010_manager_notes.py  0011_manager_note_action.py  0012_drill_prep_stages.py  0013_vehicle_name.py  0014_vehicle_line.py  0015_drop_vehicle_name.py  0016_vehicle_yard_position.py  0017_vehicle_trips.py
backend/app/: config.py  db.py  dependencies.py  main.py
backend/app/auth/: lockout.py  password.py  routes.py  session.py
backend/app/models/: __init__.py  auth.py  base.py  building.py  drills.py  employees.py  incidents.py  proxies.py  roll_calls.py  vehicles.py
backend/app/routes/: building.py  dashboard.py  drills.py  employees.py  equipment.py  incidents.py  proxies.py  roll_calls.py  teams.py  vehicles.py
backend/app/schemas/: building.py  common.py  drills.py  (+7 more)
backend/scripts/: seed.py  seed_incidents.py
backend/tests/: conftest.py  test_auth_lockout.py  test_auth_password.py  test_auth_routes.py  test_auth_session.py  test_health.py  test_routes_building.py  test_routes_building_inventory.py  test_routes_building_maintenance.py  test_routes_building_reports.py  test_routes_building_rooms.py  test_routes_dashboard.py  test_routes_employee_certifications.py  test_routes_employee_equipment.py  test_routes_employee_photo.py  test_routes_employee_ratings.py  test_routes_employees.py  test_routes_teams.py  test_routes_vehicle_equipment.py  test_routes_vehicle_inspections.py  test_routes_vehicle_maintenance.py  test_routes_vehicle_photo.py  test_routes_vehicles.py  test_seed.py
(+168 files in other folders)
