[project]
name = "markaz-backend"
version = "0.1.0"
description = "Markaz fire-station dashboard backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "bcrypt>=4.0",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.3",
    "black>=24.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# B008: FastAPI idiomatically uses Depends() in function defaults.
ignore = ["B008"]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "alembic/versions/"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
